--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
         /*font-family: 'Righteous', cursive;*/
         /*font-family: 'Ubuntu', sans-serif;*/
         /*font-family: 'Jost', sans-serif;*/
+         box-sizing:border-box;
         }
 
     :root {
