--- a/style.css
+++ b/style.css
@@ -9,18 +9,21 @@
          box-sizing: border-box;
          margin: 0;
          padding: 0;
+         /*background: var(--bg-color4);*/
         }
 
     :root {
         --bg-color: #ffffff;
         --bg-color2: rgba(0,0,0,0.6);
         --bg-color3: #fefbd8;
+        --bg-color4: #f5f5f5;
         --text-color: #000000;
         --second-color: #a09dab;
         --third-color: #ff4500;
         --4th-color: #4b4b4b;
         --5th-color: #1b1b1b1b;
         --main-color: #f75023;
+        --main-color3: #880808;
         --red-color: #800;
         --big-font:5rem;
         --h1-font:3.5rem;
@@ -44,7 +47,7 @@
 
     header {
         width: 100%;
-        /*background: var(--bg-color2);*/
+        background: var(--bg-color4);
         position: fixed;
         padding: 1.5rem 0;
     }
@@ -73,7 +76,7 @@
 
     .header-navbar nav li a {
         font-size: 1.2rem;
-        color: var(--bg-color2);
+        color: var(--main-color3);
         text-transform: uppercase;
         text-decoration: none;
     }
