--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@
         --bg-color2: rgba(0,0,0,0.6);
         --bg-color3: #fefbd8;
         --bg-color4: #f5f5f5;
+        --bg-color5: #d3d3d3;
         --text-color: #000000;
         --second-color: #a09dab;
         --third-color: #ff4500;
@@ -96,7 +97,82 @@
         transition: ease .40s;
     }
 
-/*===HERO CSS---------------------------------------------------------------------------------------------------------*/
+    .btn {
+        font-size: 2.5rem;
+        color: var(--text-color);
+        cursor: pointer;
+        display: none;
+    }
+
+/*===HEADER MEDIA QUERY CSS-------------------------------------------------------------------------------------------*/
+
+    @media (max-width: 1070px) {
+        .container {
+            padding: 0 50px;
+        }
+    }
+
+    @media (max-width: 900px) {
+        .header-navbar nav li a {
+            font-size: 0.8rem;
+        }
+
+        .btn {
+            display: block;
+        }
+
+        .container {
+            padding: 0 40px;
+        }
+
+        .header-navbar nav {
+            flex-direction: column;
+            position: fixed;
+            min-width: 100%;
+            min-height: 60vh;
+            top: 0;
+            right: 100%;
+            align-items: center;
+            justify-content: center;
+            background: var(--text-color);
+            transition: all 0.5s ease-in-out;
+        }
+
+        nav.active {
+            right: 0%;
+            transition: all 1s ease-in;
+        }
+
+        .header-navbar nav li {
+            margin: 3rem 4rem;
+        }
+
+        .header-navbar nav li a {
+            font-size: 1.5rem;
+            color: var(--bg-color);
+            position: relative;
+        }
+
+        .close-btn {
+            position: absolute;
+            top: 0;
+            left: 88%;
+            color: var(--bg-color);
+            margin: 50px;
+        }
+
+        .hero-sec .hero-sec-content h2 {
+            font-size: 0.5rem;
+            margin-top: 50px;
+        }
+
+        .hero-sec .hero-sec-content h3 {
+            margin-top: 20px;
+        }
+    }
+
+
+/*===HERO SECTION CSS-------------------------------------------------------------------------------------------------*/
 
     .hero-sec {
         font-family: var(--Poppins-font);
@@ -134,19 +210,26 @@
     .hero-sec .hero-sec-content h2 {
         font-size: var(--h2-font);
         text-transform: uppercase;
-        color: var(--bg-color3);
+        color: var(--bg-color);
         font-family: var(--Urbanist-font);
         text-align: center;
         letter-spacing: 1px;
+        margin-top: 30px;
     }
 
     .hero-sec .hero-sec-content h3 {
         font-size: 1.8rem;
+        margin-top: 10px;
         text-transform: uppercase;
-        color: var(--bg-color3);
+        color: var(--bg-color5);
         text-align: center;
         letter-spacing: 1px;
-
+        margin-bottom: 20px;
     }
 
+/*===OFFERS SECTION CSS-----------------------------------------------------------------------------------------------*/
+
+    .offers-sec {
+        background: var(--5th-color);
+    }
 
