--- a/style.css
+++ b/style.css
@@ -229,7 +229,81 @@
 
 /*===OFFERS SECTION CSS-----------------------------------------------------------------------------------------------*/
 
-    .offers-sec {
-        background: var(--5th-color);
-    }
+    /*.offers-sec {*/
+    /*    background: var(--5th-color);*/
+    /*    padding: 10rem 0;*/
+    /*}*/
 
+    /*.offers-side-content {*/
+    /*    display: grid;*/
+    /*    grid-template-columns: repeat(2, 1fr);*/
+    /*    width: 100%;*/
+    /*    grid-gap: 3rem;*/
+    /*}*/
+
+    /*.lsc-heading h2 {*/
+    /*    font-size: var(--h2-font);*/
+    /*    text-transform: capitalize;*/
+    /*    color: #880808;*/
+    /*    font-family: var(--Righteous-font);*/
+    /*    margin-bottom: 25px;*/
+    /*}*/
+
+    /*.lsc-heading h3 {*/
+    /*    font-size: 2rem;*/
+    /*    text-transform: capitalize;*/
+    /*}*/
+
+    /*.img-content {*/
+    /*    display: flex;*/
+    /*    justify-content: space-between;*/
+    /*    align-items: center;*/
+    /*    padding: 3rem 0;*/
+    /*}*/
+
+    /*.images {*/
+    /*    display: flex;*/
+    /*    align-items: center;*/
+    /*}*/
+
+    /*.images img {*/
+    /*    display: block;*/
+    /*    object-fit: cover;*/
+    /*    width: 30%;*/
+    /*}*/
+
+    /*.img-content-left {*/
+    /*    padding-left: 3rem;*/
+    /*}*/
+
+    /*.img-content-left h4 {*/
+    /*    font-size: 1.5rem;*/
+    /*    padding-block-end: 0.5rem;*/
+    /*}*/
+
+    /*.img-content-left p {*/
+    /*    font-size: 1rem;*/
+    /*    line-height: 1.5;*/
+    /*}*/
+
+    /*.img-content .prices {*/
+    /*    font-size: 0.9rem;*/
+    /*    font-weight: 600;*/
+    /*    text-transform: uppercase;*/
+    /*    border: 1px solid #880808;*/
+    /*    border-radius: 50%;*/
+    /*    padding: 8px;*/
+    /*    text-align: center;*/
+    /*}*/
+
+    /*.right-side-content {*/
+    /*    width: 100%;*/
+    /*    background: var(--bg-color);*/
+    /*}*/
+
+    /*.right-side-content img {*/
+    /*    display: block;*/
+    /*    object-fit: cover;*/
+    /*    margin-left: auto;*/
+    /*    width: 100%;*/
+    /*}*/
