--- a/style.css
+++ b/style.css
@@ -384,7 +384,6 @@
     #booking-section .form-data form {
         /*padding: 4rem 0;*/
         padding: 1.5rem 0;
-
     }
 
     #booking-section .form-data form input {
@@ -427,6 +426,8 @@
         padding: 10rem 0;
         /*background: var(--bg-color4);*/
         /*background: url("Gallery/OIP_1.png") no-repeat;*/
+        position: relative;
+        z-index: -10;
     }
 
     #todays-deal h3 {
@@ -461,25 +462,29 @@
     }
 
     #todays-deal .cards p {
-        font-size: 16px;
+        font-size: 17px;
+        font-family: var(--Jost-font);
     }
 
     #todays-deal .card-content .cards img {
-        width: 20%;
+        width: 50%;
+        z-index: 1;
     }
 
     #todays-deal .card-content h4 {
-        font-size: 1rem;
+        font-size: 1.2rem;
         padding-block-end: 0.5rem;
         font-family: var(--Urbanist-font);
         text-transform: capitalize;
         font-weight: 600;
+        margin-top: 20px;
+        color: #860111;
     }
 
     #todays-deal .card-content .price {
         font-family: var(--outfit-font);
         font-weight: 600;
-        font-size: 0.9rem;
+        font-size: 1.2rem;
         /*border: 1px solid #f75023;*/
         padding: 0.5rem;
         /*border-radius: 50%;*/
@@ -488,6 +493,7 @@
         /*color: var(--main-color);*/
         color: #860111;
         text-transform: uppercase;
+        text-align: center;
     }
 
 
