--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@
         position: fixed;
         padding: 1.5rem 0;
         font-family: var(--ubuntu-font);
-        z-index: 10;
+        z-index: 100;
     }
 
     .header-navbar {
@@ -571,9 +571,9 @@
 
     .menu-items-container .img-cards {
         border: 2px solid #880808;
-        border-left: 4px solid #000000;
-        border-bottom: 4px solid #f75023;
-        border-top: 4px solid #880000;
+        /*border-left: 4px solid #000000;*/
+        /*border-bottom: 4px solid #f75023;*/
+        /*border-top: 4px solid #880000;*/
         box-shadow: var(--box-shadow);
     }
 
@@ -582,6 +582,26 @@
         width: 100%;
         object-fit: cover;
         margin-bottom: 2rem;
+        cursor: pointer;
+        transition: all 0.5s ease-in-out;
+    }
+
+    .img-cards p {
+        text-align: center;
+        font-size: 1.2rem;
+        margin-bottom: 1.5rem ;
+        font-family: var(--Righteous-font);
+        text-transform: capitalize;
+    }
+
+    .img-cards .prices {
+        color: #860111;
+        font-size: 1.2rem;
+        text-transform: uppercase;
+    }
+
+    .img-cards img:hover {
+        transform: scale(1.1);
     }
 
 
