Responsive_Restaurant_Build

--- a/style.css
+++ b/style.css
@@ -629,7 +629,12 @@
         padding: 10rem 0;
         background: url("Gallery/FeedbackBackground1.jpg") no-repeat center center/cover fixed;
         position: relative;
+        /*z-index: 1;*/
+        margin: 0 auto;
+    }
 
+    #customer-feedback .container {
+        margin: 15px;
     }
 
     #customer-feedback::after {
@@ -640,6 +645,7 @@
         width: 100%;
         height: 100%;
         background: rgba(0,0,0,0.8);
+        /*z-index: -2;*/
     }
 
     #customer-feedback h3 {
@@ -674,6 +680,7 @@
         text-align: center;
         padding: 2rem;
         box-shadow: var(--box-shadow);
+        border-radius: 5px;
     }
 
     .customer-card img {
@@ -699,7 +706,7 @@
         text-align: center;
         color: var(--red-color);
         font-family: var(--tilt-font);
-        font-size: 1.3rem;
+        font-size: 1rem;
     }
 
 
