Responsive_Restaurant_Build

--- a/style.css
+++ b/style.css
@@ -623,7 +623,7 @@
         }
     }
 
-/*----===TESTIMONIAL SECTION------------------------------------------------------------------------------------------*/
+/*----===TESTIMONIAL SECTION CSS--------------------------------------------------------------------------------------*/
 
     #customer-feedback {
         padding: 10rem 0;
@@ -708,6 +708,8 @@
         font-family: var(--tilt-font);
         font-size: 1rem;
     }
+
+/*----===EVENTS SECTION CSS-------------------------------------------------------------------------------------------*/
 
 
 
