--- a/style.css
+++ b/style.css
@@ -769,11 +769,11 @@
             font-weight: 0;
             text-align: center;
             padding: 1.5rem 0;
+            margin-bottom: 20px;
         }
 
         .event-content a {
             text-transform: uppercase;
-            margin-top: 20px;
             text-decoration: none;
             color: var(--bg-color) ;
             background: var(--text-color);
@@ -782,6 +782,7 @@
             border-radius: 5px;
             transition: all 0.5s ease-in-out;
             font-weight: 600;
+            font-family: var(--outfit-font);
         }
 
         .event-content a:hover {
@@ -789,10 +790,52 @@
             background: var(--main-color);
         }
 
+/*----===COUNTER SECTION CSS------------------------------------------------------------------------------------------*/
+
+    #counter-section {
+        background: url("Gallery/3353887.jpg") no-repeat center center/cover;
+        padding: 10rem 0;
+        position: relative;
+        z-index: 1;
+    }
+
+    #counter-section::after {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        /*background: var(--bg-color2);*/
+        z-index: 1;
+    }
+
+    .counters {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        text-align: center;
+        color: var(--bg-color);
+        grid-gap: 2rem;
+        margin: 0 auto;
+        background: var(--bg-color2);
+        font-family: var(--outfit-font);
+        font-size: 12px;
+    }
 
 
 
+    .counter {
+        border: 1px solid var(--bg-color4);
+        padding: 2rem;
+        color: var(--bg-color);
+        border-radius: 5px;
+        text-transform: uppercase;
+        font-family: var(--Jost-font);
+    }
 
+    .num {
+        font-size: 4rem;
+    }
 
 
 
