--- a/style.css
+++ b/style.css
@@ -860,4 +860,7 @@
         }
     }
 
+/*----===OUR CHEF SECTION CSS-----------------------------------------------------------------------------------------*/
+
+
 
