--- a/style.css
+++ b/style.css
@@ -707,7 +707,8 @@
         text-align: center;
         color: var(--red-color);
         font-family: var(--tilt-font);
-        font-size: 1rem;
+        font-size: 1.2rem;
+        font-weight: 600;
     }
 
 /*----===EVENTS SECTION CSS-------------------------------------------------------------------------------------------*/
@@ -862,5 +863,66 @@
 
 /*----===OUR CHEF SECTION CSS-----------------------------------------------------------------------------------------*/
 
+    #our-chefs {
+        padding: 10rem 0;
+    }
 
+    #our-chefs .container {
+        margin: 15px;
+    }
+
+    #our-chefs .container h3 {
+        margin-top: 10px;
+        text-transform: uppercase;
+        color: var(--red-color);
+        text-align: center;
+        letter-spacing: 1px;
+        margin-bottom: 20px;
+        font-size: 2rem;
+        font-family: var(--Righteous-font);
+    }
+
+    #our-chefs .container h2 {
+        /*font-size: var(--h2-font);*/
+        font-size: 28px;
+        text-transform: uppercase;
+        font-family: var(--Urbanist-font);
+        text-align: center;
+        letter-spacing: 1px;
+        margin-top: 5px;
+    }
+
+    .chef-container {
+        margin: 4rem 0;
+        text-align: center;
+    }
+
+    .chef-cards {
+        border-radius: 5px;
+        box-shadow: var(--box-shadow);
+        /*border: 1px solid var(--main-color);*/
+    }
+
+    #chef-name {
+        font-size: 1rem;
+    }
+
+    .chef-cards img {
+        display: block;
+        object-fit: cover;
+        align-items: center;
+        justify-content: space-between;
+        margin: 0 auto;
+        width: 80%;
+        padding-top: 20px;
+    }
+
+    .chef-content {
+        padding: 2rem 0;
+    }
+
+    .position {
+        font-size: 1.2rem;
+        color: var(--main-color);
+    }
 
