--- a/style.css
+++ b/style.css
@@ -920,6 +920,7 @@
         margin: 0 auto;
         width: 80%;
         padding-top: 20px;
+        border-radius: 5px;
     }
 
     .chef-content {
@@ -959,3 +960,77 @@
     }
 
 
+/*----===FOOTER SECTION CSS-------------------------------------------------------------------------------------------*/
+
+    #footer {
+        background: #212121;
+        padding: 10rem 0;
+        color: #f5f5f5;
+        font-size: 1.2rem;
+    }
+
+    #footer .container {
+        margin: 15px;
+    }
+
+    #footer .container h2 {
+        padding-bottom: 2.5rem;
+        color: var(--main-color);
+        text-transform: capitalize;
+    }
+
+    .footer-container {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 2rem;
+    }
+
+    .about-us img {
+        border-radius: 15px;
+        background: #d3d3d3;
+        width: 50%;
+        display: block;
+        object-fit: cover;
+    }
+
+    .about-us p {
+        line-height: 1.5;
+        padding-bottom: 2rem;
+    }
+
+    .about-us a {
+        color: var(--main-color);
+    }
+
+    .opening-hours {
+        line-height: 1.8;
+        text-transform: capitalize;
+        padding-bottom: 2rem;
+    }
+
+    .day {
+        line-height: 1.8;
+        text-transform: capitalize;
+        padding-bottom: 1.5rem;
+    }
+
+    .contact-us {
+        line-height: 2;
+        text-transform: capitalize;
+    }
+
+/*----===COPY RIGHT FOOTER SECTION------------------------------------------------------------------------------------*/
+
+    footer {
+        background: #171717;
+        text-align: center;
+        padding: 2rem 0;
+        font-size: 1.2rem;
+        color: var(--bg-color);
+    }
+
+    footer a {
+        color: var(--main-color);
+        text-decoration: none;
+        text-transform: uppercase;
+    }
