--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
         /*font-family: 'Ubuntu Condensed', sans-serif;*/
         /*font-family: 'Outfit', sans-serif;*/
         /*font-family: 'Tilt Neon', cursive;*/
+        /*font-family: 'Heebo', sans-serif;*/
          box-sizing: border-box;
          margin: 0;
          padding: 0;
@@ -43,6 +44,7 @@
         --Condensed-font: 'Ubuntu Condensed', sans-serif;
         --outfit-font:'Outfit', sans-serif;
         --tilt-font:'Tilt Neon', cursive;
+        --heebo-font:'Heebo', sans-serif;
         --box-shadow: 10px 10px 5px rgba(0,0,0,.3);
     }
 
@@ -962,62 +964,62 @@
 
 /*----===FOOTER SECTION CSS-------------------------------------------------------------------------------------------*/
 
-    #footer {
-        background: #212121;
-        padding: 10rem 0;
-        color: #f5f5f5;
-        font-size: 1.2rem;
-    }
+    /*#footer {*/
+    /*    background: #212121;*/
+    /*    padding: 10rem 0;*/
+    /*    color: #f5f5f5;*/
+    /*    font-size: 1.2rem;*/
+    /*}*/
 
-    #footer .container {
-        margin: 15px;
-    }
+    /*#footer .container {*/
+    /*    margin: 15px;*/
+    /*}*/
 
-    #footer .container h2 {
-        padding-bottom: 2.5rem;
-        color: var(--main-color);
-        text-transform: capitalize;
-    }
+    /*#footer .container h2 {*/
+    /*    padding-bottom: 2.5rem;*/
+    /*    color: var(--main-color);*/
+    /*    text-transform: capitalize;*/
+    /*}*/
 
-    .footer-container {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-gap: 2rem;
-    }
+    /*.footer-container {*/
+    /*    display: grid;*/
+    /*    grid-template-columns: repeat(3, 1fr);*/
+    /*    grid-gap: 2rem;*/
+    /*}*/
 
-    .about-us img {
-        border-radius: 15px;
-        background: #d3d3d3;
-        width: 50%;
-        display: block;
-        object-fit: cover;
-    }
+    /*.about-us img {*/
+    /*    border-radius: 15px;*/
+    /*    background: #d3d3d3;*/
+    /*    width: 50%;*/
+    /*    display: block;*/
+    /*    object-fit: cover;*/
+    /*}*/
 
-    .about-us p {
-        line-height: 1.5;
-        padding-bottom: 2rem;
-    }
+    /*.about-us p {*/
+    /*    line-height: 1.5;*/
+    /*    padding-bottom: 2rem;*/
+    /*}*/
 
-    .about-us a {
-        color: var(--main-color);
-    }
+    /*.about-us a {*/
+    /*    color: var(--main-color);*/
+    /*}*/
 
-    .opening-hours {
-        line-height: 1.8;
-        text-transform: capitalize;
-        padding-bottom: 2rem;
-    }
+    /*.opening-hours {*/
+    /*    line-height: 1.8;*/
+    /*    text-transform: capitalize;*/
+    /*    padding-bottom: 2rem;*/
+    /*}*/
 
-    .day {
-        line-height: 1.8;
-        text-transform: capitalize;
-        padding-bottom: 1.5rem;
-    }
+    /*.day {*/
+    /*    line-height: 1.8;*/
+    /*    text-transform: capitalize;*/
+    /*    padding-bottom: 1.5rem;*/
+    /*}*/
 
-    .contact-us {
-        line-height: 2;
-        text-transform: capitalize;
-    }
+    /*.contact-us {*/
+    /*    line-height: 2;*/
+    /*    text-transform: capitalize;*/
+    /*}*/
 
 /*----===COPY RIGHT FOOTER SECTION------------------------------------------------------------------------------------*/
 
