--- a/style.css
+++ b/style.css
@@ -209,7 +209,6 @@
         }
     }
 
-
 /*===HERO SECTION CSS-------------------------------------------------------------------------------------------------*/
 
     .hero-sec {
@@ -1021,18 +1020,64 @@
     /*    text-transform: capitalize;*/
     /*}*/
 
+    .footer-sec {
+        /*display: flex;*/
+        /*align-items: center;*/
+        /*justify-content: flex-end;*/
+        /*flex-direction: column;*/
+        position: relative;
+        background: #212121;
+        font-size: 1.2rem;
+        color: #f5f5f5;
+        width: 100%;
+        height: auto;
+    }
+
+    .footer-container {
+        width: 100%;
+        padding: 0 15px;
+        margin: 0 auto;
+        max-width: 1320px;
+    }
+
+    .footer-wrapper {
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+
+    .footer-wrapper .footer-widget {
+        width: calc(20% - 30px);
+        margin: 0 15px 50px;
+        padding: 5rem 0;
+    }
+
+    .footer-wrapper .footer-widget:nth-child(1) {
+        width: calc(40% - 30px);
+        margin-right: 15px;
+    }
+
+    .footer-wrapper .footer-widget .footer-logo {
+        margin-bottom: 30px;
+        vertical-align: middle;
+        width: 20%;
+    }
+
+
+
 /*----===COPY RIGHT FOOTER SECTION------------------------------------------------------------------------------------*/
 
-    footer {
-        background: #171717;
-        text-align: center;
-        padding: 2rem 0;
-        font-size: 1.2rem;
-        color: var(--bg-color);
-    }
+    /*footer {*/
+    /*    background: #171717;*/
+    /*    text-align: center;*/
+    /*    padding: 2rem 0;*/
+    /*    font-size: 1.2rem;*/
+    /*    color: var(--bg-color);*/
+    /*}*/
 
-    footer a {
-        color: var(--main-color);
-        text-decoration: none;
-        text-transform: uppercase;
-    }
+    /*footer a {*/
+    /*    color: var(--main-color);*/
+    /*    text-decoration: none;*/
+    /*    text-transform: uppercase;*/
+    /*}*/
