--- a/style.css
+++ b/style.css
@@ -1031,6 +1031,7 @@
         color: #f5f5f5;
         width: 100%;
         height: auto;
+        font-size: var(--outfit-font);
     }
 
     .footer-container {
@@ -1061,8 +1062,52 @@
     .footer-wrapper .footer-widget .footer-logo {
         margin-bottom: 30px;
         vertical-align: middle;
-        width: 20%;
+        width: 25%;
     }
+
+    .footer-wrapper .footer-widget p {
+        margin-bottom: 40px;
+        font-size: 18px;
+        line-height: 24px;
+    }
+
+    .footer-wrapper .footer-widget .social-media-icons {
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+    }
+
+    .footer-wrapper .footer-widget .social-media-icons li {
+        list-style: none;
+    }
+
+    .footer-wrapper .footer-widget .social-media-icons li a {
+        width: 40px;
+        height: 40px;
+        margin-right: 20px;
+        color: var(--red-color);
+        /*background-color: rgba(3, 127, 243 ,0.5);*/
+        background: var(--bg-color4);
+        border-radius: 50%;
+        font-size: 25px;
+        text-decoration: none;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: all 0.5s ease-out;
+    }
+
+    .footer-wrapper .footer-widget .social-media-icons li a:hover {
+        background: var(--third-color);
+        color: var(--bg-color);
+        border: 1px solid var(--bg-color2);
+    }
+
+    .footer-wrapper .footer-widget h6 {
+    }
+
+
+
 
 
 
