--- a/style.css
+++ b/style.css
@@ -1031,7 +1031,7 @@
         color: #f5f5f5;
         width: 100%;
         height: auto;
-        font-size: var(--outfit-font);
+        font-family: var(--outfit-font);
     }
 
     .footer-container {
@@ -1063,6 +1063,7 @@
         margin-bottom: 30px;
         vertical-align: middle;
         width: 25%;
+        border-radius: 5px;
     }
 
     .footer-wrapper .footer-widget p {
@@ -1104,8 +1105,91 @@
     }
 
     .footer-wrapper .footer-widget h6 {
+        margin: 10px 0 35px;
+        font-size: 1.5rem ;
+        font-family: var(--Urbanist-font);
+        text-transform: capitalize;
+        color: var(--red-color);
     }
 
+    .footer-wrapper .footer-widget .footer-links li,
+    .footer-wrapper .footer-widget .footer-links-list li {
+        list-style: none;
+    }
+
+    .footer-wrapper .footer-widget .footer-links li a {
+        color: var(--bg-color4);
+        text-decoration: none;
+        text-transform: uppercase;
+        line-height: 55px;
+        font-size: 17px;
+    }
+
+    .footer-wrapper .footer-widget .footer-links-list li a {
+        color: var(--bg-color4);
+        text-decoration: none;
+        text-transform: uppercase;
+        line-height: 60px;
+        width: 100%;
+    }
+
+    .footer-wrapper .footer-widget .footer-links-list li a:hover {
+        color: var(--third-color);
+    }
+
+    .footer-wrapper .footer-widget .footer-links li a span {
+        font-size: 16px;
+        text-transform: uppercase;
+    }
+
+    .copy-right-wrapper {
+        padding: 25px 0;
+        border-top: 1px solid var(--bg-color);
+    }
+
+    .copy-right-wrapper p {
+        font-size: 15px;
+        font-weight: 500;
+        text-align: center;
+    }
+
+    .copy-right-wrapper p a {
+        font-weight: 500;
+        text-decoration: none;
+        transition: all 0.3s ease-out;
+        color: var(--red-color);
+    }
+
+    .copy-right-wrapper p a:hover {
+        color: var(--third-color);
+    }
+
+
+/*----===MEDIA QUERY FOOTER SECTION CSS-------------------------------------------------------------------------------*/
+
+    @media (max-width: 992px) {
+        .footer-container {
+            max-width: 960px;
+        }
+
+        .footer-wrapper .footer-widget,
+        .footer-wrapper .footer-widget:nth-child(1) {
+            width: calc(50% - 30px);
+        }
+    }
+
+
+    @media (max-width: 768px) {
+        .footer-container {
+            max-width: 720px;
+        }
+
+        .footer-wrapper .footer-widget,
+        .footer-wrapper .footer-widget:nth-child(1) {
+            width: 100%;
+            margin: 0 10px 50px;
+        }
+    }
 
 
 
