--- a/style.css
+++ b/style.css
@@ -1178,7 +1178,6 @@
         }
     }
 
-
     @media (max-width: 768px) {
         .footer-container {
             max-width: 720px;
@@ -1188,6 +1187,10 @@
         .footer-wrapper .footer-widget:nth-child(1) {
             width: 100%;
             margin: 0 10px 50px;
+        }
+
+        .footer-wrapper .footer-widget .social-media-icons {
+            display: flex;
         }
     }
 
