--- a/style.css
+++ b/style.css
@@ -52,6 +52,32 @@
         scroll-behavior: smooth;
     }
 
+/*===LOADER PART CSS--------------------------------------------------------------------------------------------------*/
+
+    .Loader-part {
+        position: fixed;
+        z-index: 999999;
+        background: var(--bg-color2);
+        width: 100%;
+        height: 100%;
+    }
+
+    .Loader {
+        border: 0 solid transparent;
+        border-radius: 50%;
+        width: 150px;
+        height: 150px;
+        position: absolute;
+        top: calc(50vh - 75px);
+        left: calc(50vw - 75px);
+    }
+
+    .Loader:before, .Loader:after {
+        content: '';
+        border: 1rem solid #ff5733;
+
+    }
+
 /*===HEADER CSS-------------------------------------------------------------------------------------------------------*/
 
     .container {
